k8s/threadr/control-plane/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: threadr-control-plane
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "80"
spec:
  selector:
    app.kubernetes.io/name: threadr-control-plane
  ports:
    - name: http
      port: 80
      targetPort: http
